Se sube el avance de la aplicación, Está todo listo, falta conectar algunas cosas con els ervidor, pero ya está la base de todo, sólo es detallar para dar por terminada la app.

--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
-                android:id="@+id/compartir_drawer"
+                android:id="@+id/compartir_atras"
                 android:layout_width="30dp"
                 android:layout_height="30dp" />
             <TextView
