--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <TextView
+            android:id="@+id/drawer_nombre_miembro"
             android:textSize="15sp"
             android:layout_marginLeft="20dp"
             android:layout_centerVertical="true"
