Se detallan muchas cosas más, se agregan las estrellas, se detalla el diseño, queda funcionando el login de facebook, se guarda el acces token y su información, falta completarlo con el registro del miembro

--- a/app/src/main/res/layout/activity_actividades.xml
+++ b/app/src/main/res/layout/activity_actividades.xml
@@ -25,6 +25,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp" />
                 <TextView
+                    android:fontFamily="sans-serif-light"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:gravity="center"
