--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -7,6 +7,7 @@ android:layout_height="match_parent">
 
 <!-- Contenido principal -->
 <LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include
@@ -15,6 +16,13 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
+
+    <RatingBar
+
+        android:numStars="5"
+        style="@style/estrella"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
 
 <!-- El drawer -->
