--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -10,36 +10,64 @@
         android:id="@+id/drawer_imagen_perfil"
         android:layout_width="match_parent"
         android:layout_height="170dp" />
-    <RelativeLayout
-        android:background="@drawable/degradado_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
-        <TextView
-            android:id="@+id/drawer_nombre_miembro"
-            android:textSize="15sp"
-            android:layout_marginLeft="20dp"
-            android:layout_centerVertical="true"
-            android:textColor="#FFFFFF"
-            android:text="Nombre del miembro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:alpha=".9"
-            android:src="@drawable/icono_triangulo"
-            android:id="@+id/drawer_mas"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_width="11dp"
-            android:layout_height="11dp" />
-    </RelativeLayout>
     <LinearLayout
-        android:layout_marginLeft="20dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/drawer_opcion_sesion"
+            android:background="@drawable/degradado_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/drawer_nombre_miembro"
+                android:textSize="15sp"
+                android:layout_marginLeft="20dp"
+                android:layout_centerVertical="true"
+                android:textColor="#FFFFFF"
+                android:text="Nombre del miembro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:alpha=".9"
+                android:src="@drawable/icono_triangulo"
+                android:id="@+id/drawer_mas"
+                android:layout_marginRight="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_width="11dp"
+                android:layout_height="11dp" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/drawer_layout_cerrar_sesion"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TextView
+                android:alpha=".8"
+                android:textColor="#000000"
+                android:layout_marginLeft="30dp"
+                android:fontFamily="sans-serif-light"
+                android:textSize="16sp"
+                android:layout_centerVertical="true"
+                android:text="Cerrar sesión"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_alignParentBottom="true"
+                android:alpha=".12"
+                android:background="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+        </RelativeLayout>
+    </LinearLayout>
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <!-- Buscar actividad -->
         <LinearLayout
+            android:layout_marginLeft="20dp"
             android:id="@+id/drawer_layout_buscar_actividad"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -65,6 +93,7 @@
         </LinearLayout>
         <!-- Actividades -->
         <LinearLayout
+            android:layout_marginLeft="20dp"
             android:id="@+id/drawer_layout_actividades"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -90,6 +119,7 @@
         </LinearLayout>
         <!-- Perfil -->
         <LinearLayout
+            android:layout_marginLeft="20dp"
             android:id="@+id/drawer_layout_perfil"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -115,6 +145,7 @@
         </LinearLayout>
         <!-- Medallas -->
         <LinearLayout
+            android:layout_marginLeft="20dp"
             android:id="@+id/drawer_layout_medallas"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -140,6 +171,7 @@
         </LinearLayout>
         <!-- Metas -->
         <LinearLayout
+            android:layout_marginLeft="20dp"
             android:id="@+id/drawer_layout_metas"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -160,6 +192,39 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="14sp"
                 android:text="Metas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <TextView
+            android:layout_marginBottom="7dp"
+            android:layout_marginTop="7dp"
+            android:alpha=".12"
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
+        <!-- Ayudanos a mejorar -->
+        <LinearLayout
+            android:layout_marginLeft="20dp"
+            android:id="@+id/drawer_layout_ayudanos_mejorar"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:alpha=".5"
+                android:id="@+id/drawer_icono_ayudano_mejorar"
+                android:layout_width="28dp"
+                android:layout_height="28dp" />
+            <TextView
+                android:id="@+id/drawer_texto_ayudanos_mejorar"
+                android:alpha=".7"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="30dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="14sp"
+                android:text="Ayudanos a mejorar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
