--- a/app/src/main/res/layout/fragment_perfil_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil_perfil.xml
@@ -2,120 +2,145 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="230dp">
-            <ImageView
-                android:scaleType="centerCrop"
-                android:id="@+id/perfil_imagen_miembro"
-                android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="230dp" />
-            <ImageView
-                android:layout_alignParentBottom="true"
-                android:id="@+id/perfil_imagen_degradado"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textColor="#FFFFFF"
-                android:layout_marginLeft="15dp"
-                android:textSize="15sp"
-                android:layout_marginBottom="10dp"
-                android:text="Nombre del miembro"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/perfil_nombre_miembro"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textColor="#FFFFFF"
-                android:layout_marginRight="15dp"
-                android:layout_alignParentRight="true"
-                android:textSize="15sp"
-                android:layout_marginBottom="10dp"
-                android:text="Edad en años"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/perfil_edad_miembro"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp">
+                    <ImageView
+                        android:scaleType="centerCrop"
+                        android:id="@+id/perfil_imagen_miembro"
+                        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+                        android:layout_width="match_parent"
+                        android:layout_height="230dp" />
+                    <ImageView
+                        android:layout_alignParentBottom="true"
+                        android:id="@+id/perfil_imagen_degradado"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:fontFamily="sans-serif"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginLeft="15dp"
+                        android:textSize="15sp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Nombre del miembro"
+                        android:layout_alignParentBottom="true"
+                        android:id="@+id/perfil_nombre_miembro"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:fontFamily="sans-serif"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginRight="15dp"
+                        android:layout_alignParentRight="true"
+                        android:textSize="15sp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Edad en años"
+                        android:layout_alignParentBottom="true"
+                        android:id="@+id/perfil_edad_miembro"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <TextView
+                    android:fontFamily="sans-serif"
+                    android:layout_marginTop="20dp"
+                    android:alpha=".8"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Actividad principal como miembro de antorcha"
+                    android:textSize="14sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:fontFamily="sans-serif"
+                    android:layout_marginTop="13dp"
+                    android:alpha=".8"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Lugar de residencia"
+                    android:textSize="14sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:alpha=".12"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:background="#000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
+                <TextView
+                    android:fontFamily="sans-serif"
+                    android:alpha=".8"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Una descripcion de quien eres, la descripcion es personal"
+                    android:textSize="13sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:alpha=".12"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:background="#000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp">
+                    <TextView
+                        android:fontFamily="sans-serif"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:text="Numero de medallas"
+                        android:textColor="#000000"
+                        android:textSize="15sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp" />
+                    <!--Medallas visuales-->
+                    <LinearLayout
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal"
+                        android:layout_weight="4"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp">
+                        <ImageView
+                            android:alpha=".2"
+                            android:layout_gravity="center"
+                            android:id="@+id/perfil_flecha_izquierda"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent" />
+                        <android.support.v7.widget.RecyclerView
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="5"
+                            android:id="@+id/perfil_lista_medallas"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent" />
+                        <ImageView
+                            android:alpha=".2"
+                            android:layout_gravity="center"
+                            android:id="@+id/perfil_flecha_derecha"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
         </RelativeLayout>
-        <TextView
-            android:layout_marginTop="20dp"
-            android:alpha=".8"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:text="Actividad principal como miembro de antorcha"
-            android:textSize="14sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginTop="15dp"
-            android:alpha=".8"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:text="Lugar de residencia"
-            android:textSize="14sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_marginTop="35dp"
-            android:alpha=".8"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:text="Una descripcion de quien eres, la descripcion es personal"
-            android:textSize="13sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="80dp">
-        <TextView
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="Numero de medallas"
-            android:textColor="#000000"
-            android:textSize="15sp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
-        <!--Medallas visuales-->
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_weight="4"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <ImageView
-                android:alpha=".2"
-                android:layout_gravity="center"
-                android:id="@+id/perfil_flecha_izquierda"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_gravity="center_vertical"
-                android:layout_weight="5"
-                android:id="@+id/perfil_lista_medallas"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-            <ImageView
-                android:alpha=".2"
-                android:layout_gravity="center"
-                android:id="@+id/perfil_flecha_derecha"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
