--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -21,6 +21,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp" />
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
@@ -41,8 +42,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:textSize="19sp"
-                android:alpha=".8"
+
                 android:textColor="#000000"
                 android:text="Envía tu código!"
                 android:layout_width="wrap_content"
@@ -72,6 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:fontFamily="sans-serif-thin"
                         android:layout_gravity="center"
                         android:textSize="40sp"
                         android:textColor="#FFFFFF"
@@ -80,6 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:fontFamily="sans-serif"
                         android:textSize="15sp"
                         android:layout_marginTop="3dp"
                         android:textColor="#FFFFFF"
