--- a/app/src/main/res/layout/activity_medallas.xml
+++ b/app/src/main/res/layout/activity_medallas.xml
@@ -25,6 +25,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp" />
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
@@ -56,7 +57,6 @@
                 android:id="@+id/medallas_cantidad_medallas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
             <LinearLayout
                 android:background="#FFFFFF"
                 android:id="@+id/medallas_layout_compartir"
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:src="@drawable/medalla_oculta"
+                    android:src="@drawable/oculta"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/medallas_medalla_principal"
                     android:layout_marginTop="40dp"
