--- a/app/src/main/res/layout/item_lista_medalla.xml
+++ b/app/src/main/res/layout/item_lista_medalla.xml
@@ -7,9 +7,9 @@
         android:id="@+id/item_medallas_medalla"
         android:alpha=".4"
         android:scaleType="centerCrop"
-        android:src="@drawable/medalla_oculta"
+        android:src="@drawable/oculta_s"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_width="55dp"
+        android:layout_height="55dp" />
 </RelativeLayout>
