--- a/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
+++ b/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
@@ -54,27 +54,37 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_weight="5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/sliding_buscar_actividades_espacio_contacto"
-                    android:alpha=".4"
-                    android:layout_weight="2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
+                <RatingBar
+
+                    android:numStars="5"
+                    style="@style/estrella"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
                 <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"></LinearLayout>
-                <ImageView
-                    android:id="@+id/sliding_buscar_actividades_espacio_compartir"
-                    android:alpha=".4"
-                    android:layout_weight="2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/sliding_buscar_actividades_espacio_contacto"
+                        android:alpha=".4"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" />
+                    <LinearLayout
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"></LinearLayout>
+                    <ImageView
+                        android:id="@+id/sliding_buscar_actividades_espacio_compartir"
+                        android:alpha=".4"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
     <ScrollView
