Se cambian los colores de los textos de tab layout y del dialog date picker

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,12 @@
         <item name="android:maxHeight">25dip</item>
     </style>
 
+    <style name="datePickerDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <!-- this is new -->
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+
 
 
 </resources>
