Se agrega la opción de agregar nuevos deportes, se corrige el login de facebook y se agrean las conexiones para medallas y reseñas, se agregan inserciones a la base de datos

--- a/app/src/main/res/layout/activity_nuevo_deporte_favorito.xml
+++ b/app/src/main/res/layout/activity_nuevo_deporte_favorito.xml
@@ -31,4 +31,8 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
+    <ListView
+        android:id="@+id/nuevo_deporte_lista_disciplina"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
