--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
+            android:id="@+id/login_campo_correo"
             android:textSize="14sp"
             android:gravity="center"
             android:layout_marginTop="15dp"
@@ -64,6 +65,7 @@
             android:hint="Correo Electronico"
             android:layout_height="35dp" />
         <EditText
+            android:id="@+id/login_campo_pass"
             android:layout_marginTop="10dp"
             android:textSize="14sp"
             android:gravity="center"
