--- a/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
+++ b/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
@@ -121,7 +121,7 @@
             <TextView
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:alpha=".8"
+                android:alpha=".87"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:text="Descripción"
@@ -129,14 +129,15 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_marginTop="10dp"
-                android:alpha=".6"
+                android:alpha=".57"
                 android:textColor="#000000"
+                android:gravity="center"
                 android:text="Una descripción mas detallada del espacio deportivo que quiero asisitir para poder ibtener mas información"
                 android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
                 android:alpha=".1"
                 android:background="#000000"
@@ -179,9 +180,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:fontFamily="sans-serif-light"
                     android:alpha=".6"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:layout_marginRight="30dp"
                     android:layout_alignParentRight="true"
                     android:text="Escribe una reseña"
@@ -190,8 +192,8 @@
                 <ImageView
                     android:layout_alignParentRight="true"
                     android:id="@+id/sliding_buscar_actividades_espacio_lapiz"
-                    android:layout_width="23dp"
-                    android:layout_height="23dp" />
+                    android:layout_width="21dp"
+                    android:layout_height="21dp" />
             </RelativeLayout>
             <LinearLayout
                 android:orientation="horizontal"
@@ -256,7 +258,7 @@
             <RelativeLayout
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="100dp">
                 <ImageView
                     android:scaleType="centerCrop"
                     android:src="@drawable/nadar"
@@ -265,20 +267,42 @@
             </RelativeLayout>
             <TextView
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:alpha=".1"
                 android:background="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
             <TextView
-                android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:alpha=".8"
+                android:alpha=".87"
                 android:textColor="#000000"
-                android:textStyle="bold"
+                android:textSize="17sp"
                 android:text="Precio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <!-- la parte de precios-->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Spinner
+                    android:layout_width="70dp"
+                    android:layout_height="37dp"/>
+                <Spinner
+                    android:layout_width="70dp"
+                    android:layout_height="37dp"/>
+                <TextView
+                    android:alpha=".87"
+                    android:textColor="#000000"
+                    android:textSize="17sp"
+                    android:text="$00.00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <ImageButton
+                android:id="@+id/buscar_espacio_boton_asignarme_espacio"
+                android:layout_width="match_parent"
+                android:layout_height="42dp" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
