Queda funcionando la parte del login y del registro, funciona la lista de disciplinas y deportes favoritos, se corrigen los datos del mapa

--- a/app/src/main/res/layout/filtro_busqueda_espacio.xml
+++ b/app/src/main/res/layout/filtro_busqueda_espacio.xml
@@ -61,12 +61,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/dialogo_filtro_espacio_cancelar"
             android:textSize="15sp"
             android:textColor="@color/wallet_holo_blue_light"
             android:text="CANCELAR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/dialogo_filtro_espacio_aceptar"
             android:textColor="@color/wallet_holo_blue_light"
             android:textSize="15sp"
             android:layout_marginLeft="30dp"
