--- a/app/src/main/res/layout/activity_medallas.xml
+++ b/app/src/main/res/layout/activity_medallas.xml
@@ -37,26 +37,10 @@
         </RelativeLayout>
         </android.support.v7.widget.Toolbar>
         <RelativeLayout
+            android:background="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:alpha=".4"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
-                android:id="@+id/medallas_compartir"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-            <TextView
-                android:alpha=".8"
-                android:textColor="#000000"
-                android:textSize="13sp"
-                android:layout_alignParentRight="true"
-                android:text="15/46"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="20dp"
-                android:id="@+id/medallas_cantidad_medallas"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
             <LinearLayout
                 android:background="#FFFFFF"
                 android:id="@+id/medallas_layout_compartir"
@@ -108,7 +92,25 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
-
+            <!-- La imagen de compartir-->
+            <ImageView
+                android:alpha=".4"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="15dp"
+                android:id="@+id/medallas_compartir"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
+            <TextView
+                android:alpha=".8"
+                android:textColor="#000000"
+                android:textSize="13sp"
+                android:layout_alignParentRight="true"
+                android:text="15/46"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/medallas_cantidad_medallas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <!-- PARTE DE MEDALLAS-->
             <LinearLayout
                 android:orientation="vertical"
@@ -166,6 +168,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textSize="16sp"
@@ -190,6 +193,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textSize="16sp"
@@ -214,6 +218,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textSize="16sp"
@@ -238,6 +243,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textSize="16sp"
@@ -262,6 +268,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textSize="16sp"
