--- a/app/src/main/res/layout/fragment_perfil_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil_perfil.xml
@@ -27,6 +27,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:alpha=".87"
                         android:fontFamily="sans-serif"
                         android:textColor="#FFFFFF"
                         android:layout_marginLeft="15dp"
@@ -38,6 +39,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:alpha=".87"
                         android:fontFamily="sans-serif"
                         android:textColor="#FFFFFF"
                         android:layout_marginRight="15dp"
@@ -137,6 +139,141 @@
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="match_parent" />
+                    </LinearLayout>
+
+                </LinearLayout>
+                <!-- Numero de medallas -->
+                <LinearLayout
+                    android:paddingBottom="20dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp">
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="#000000"
+                            android:textSize="13sp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Prometeo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:fontFamily="sans-serif-light"
+                            android:alpha=".8"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="#000000"
+                            android:textSize="13sp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Antorcha"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:fontFamily="sans-serif-light"
+                            android:alpha=".8"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="#000000"
+                            android:textSize="13sp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Fuego"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:fontFamily="sans-serif-light"
+                            android:alpha=".8"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="#000000"
+                            android:textSize="13sp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Flama"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:fontFamily="sans-serif-light"
+                            android:alpha=".8"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="#000000"
+                            android:textSize="13sp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Chispa"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:fontFamily="sans-serif-light"
+                            android:alpha=".8"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
