--- a/app/src/main/res/layout/item_seleccionar_disciplina.xml
+++ b/app/src/main/res/layout/item_seleccionar_disciplina.xml
@@ -5,10 +5,10 @@
     >
     <LinearLayout
         android:orientation="vertical"
-        android:id="@+id/seleccionar_disciplina_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
+            android:id="@+id/item_disciplina_clic"
             android:layout_width="match_parent"
             android:layout_height="59dp">
             <LinearLayout
@@ -48,4 +48,9 @@
         android:background="#000000"
         android:layout_width="match_parent"
         android:layout_height="1dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/seleccionar_disciplina_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></LinearLayout>
 </LinearLayout>
