--- a/app/src/main/res/layout/activity_nuevo_deporte_favorito.xml
+++ b/app/src/main/res/layout/activity_nuevo_deporte_favorito.xml
@@ -29,6 +29,12 @@
                 android:text="Nuevos deportes favoritos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_marginRight="15dp"
+                android:layout_alignParentRight="true"
+                android:id="@+id/nuevo_deporte_guardar"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <ListView
