--- a/app/src/main/res/layout/item_seleccionar_deporte.xml
+++ b/app/src/main/res/layout/item_seleccionar_deporte.xml
@@ -4,12 +4,12 @@
     android:layout_height="60dp"
     >
     <CheckBox
-        android:checked="true"
         android:layout_marginLeft="20dp"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
     <TextView
+        android:paddingTop="20dp"
         android:gravity="center_vertical"
         android:layout_marginLeft="35dp"
         android:layout_gravity="center_vertical"
