--- a/app/src/main/res/layout/item_seleccionar_disciplina.xml
+++ b/app/src/main/res/layout/item_seleccionar_disciplina.xml
@@ -17,7 +17,7 @@
                 android:layout_height="match_parent">
                 <CheckBox
                     android:id="@+id/item_seleccionar_disciplina_check"
-                    android:checked="true"
+                    android:checked="false"
                     android:layout_marginLeft="20dp"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
